--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href='css/bootstrap.min.css' rel="stylesheet" type="text/css"></link>
   <link href='css/app.css' rel="stylesheet" type="text/css"></link>
   <script src="js/angular.min.js" type="text/javascript" ></script>
+  <script src="js/angular-animate.min.js" type="text/javascript" ></script>
   <script src="js/app.js" type="text/javascript" ></script>
 </head>
 <body ng-controller="customersController">
